css/style.css
/* ... */
.loader .bar8 {
  transform: rotate(210deg) translate(0, -130%);
  animation-delay: -0.5s;
}

.loader .bar9 {
  transform: rotate(240deg) translate(0, -130%);
  animation-delay: -0.4s;
}

.loader .bar10 {
  transform: rotate(270deg) translate(0, -130%);
  animation-delay: -0.3s;
}

.loader .bar11 {
  transform: rotate(300deg) translate(0, -130%);
  animation-delay: -0.2s;
}

.loader .bar12 {
  transform: rotate(330deg) translate(0, -130%);
  animation-delay: -0.1s;
}

/* ==========================================================================
   PRELOADER MAIN
   ========================================================================== */
.preloader {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: var(--bg);
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 9999;
  transition: all 0.8s ease;
  /* backdrop-filter: blur(10px); */
  overflow: hidden;
  
}
.brand-wrapper-pre{
    display: flex;
  position: absolute;
  transform: scale(2.5);
  transition: transform 0.8s ease-in-out;
  transform-origin: center center;
  will-change: transform;
}
.cursor-blink{
  color: #414141;
  font-weight: 200;
  position: absolute;
  animation: blink 0.7s steps(1) infinite;
}


/* ==========================================================================
   SCROLLBAR STYLING
   ========================================================================== */
::-webkit-scrollbar-thumb:hover {
  background-color: #55555581;
}

/* ==========================================================================
   TYPOGRAPHY
   ========================================================================== */
a {
  text-decoration: none;
  color: inherit;
  transition: color 0.3s ease;
}

b {
  font-weight: 500;
  font-size: 16px;
}
strong{
color: #fff
  font-weight: 500;
}

p {
  line-height: 1.75rem;
  font-weight: 400;
  /* text-wrap: pre; */
  font-size: clamp(1rem, 4vw, calc(0.7rem * 1.168));
}

h2 {
  font-size: clamp(1.7rem, 2.2vw, 2.3rem);
}
h3{
  font-weight: 400;
  font-size: clamp(1.3rem, 1.8vw, 1.8rem);
}
.h3-l{
  font-weight: 500;
  font-size: clamp(1.3rem, 2.1vw, 2.4rem)
}

.bold {
  font-family: "Geist Mono", monospace;
  font-optical-sizing: auto;
  font-size: 16px;
  font-weight: 600;
}

.font-size-3 {
  font-size: 0.87rem;
  line-height: 1.25rem;
  letter-spacing: 1px;
}

.font-semibold {
  font-weight: 400;
}

.font-small {
  font-size: small;
}

/* Text Colors */
.color-gray, .text-muted-foreground {
  color: hsl(var(--muted-foreground));
}

.color-primary {
  color: var(--primary);
}

.txt-author {
  position: relative;
  display: inline-block;
  /* border-bottom: 1.5px solid var(--text-light); */
  font-weight: 400;
  padding-bottom: 1px;
  transition: 0.3s all ease-in-out;
}
.txt-author::before{
  content: '';
  position: absolute;
  width: 100%;
  height: 1.2px;
  background-color: var(--primary);
  bottom: 2px;
  border-radius: 20px;
}

.txt-author:hover {
  transition: 0.3s all ease-in-out;
  color: var(--primary);
}

.txt-small {
  font-size: 12px;
}

.txt-file {
  color: var(--text);
  font-size: 13px;
}

.txt-status {
  font-size: 12px;
  color: var(--text);
  font-weight: 100;
}

.txt-size {
  color: var(--text-gray-inverted);
}
.text-sm {
    font-size: .9rem;
    line-height: 1.25rem;
    /* color: var(--text-light); */
}
.current-sm{
  font-weight: 400;
  color: var(--text);
}
.op-5{
  opacity: .5;
}

.break-words {
    overflow-wrap: break-word;
}
/* .txt-white{
  color: #fff;
  font-size: 14px;
} */

/* ==========================================================================
   LAYOUT UTILITIES
   ========================================================================== */

/* Flexbox */
.flex {
  display: flex;
}

.nv-flex {
  display: flex;
  align-items: center;
  justify-content: center;
}

.flex-center {
  justify-content: center;
  align-items: center;
}

.flex-between {
  justify-content: space-between;
}

.flex-around {
  justify-content: space-around;
}

.flex-evenly {
  justify-content: space-evenly;
}

.flex-start {
  justify-content: flex-start;
}

.flex-end {
  justify-content: flex-end;
}

.justify-between {
  justify-content: space-between;
}

.justify-center {
  justify-content: center;
}

.align-flex-end {
  align-items: flex-end;
}

.align-center {
  align-items: center;
}

.align-content {
  align-content: center;
}

.flex-row {
  flex-direction: row;
}

.flex-col {
  flex-direction: column;
}

.flex-wrap {
  flex-wrap: wrap;
}

.flex-nowrap {
  flex-wrap: nowrap;
}

/* Positioning */
.position-absolute {
  position: absolute;
}

.position-fixed {
  position: fixed;
}

.position-sticky {
  position: sticky;
}

.position-relative {
  position: relative;
}

.top-0 {
  top: 0;
}

.left-0 {
  left: 0;
}

.right-0 {
  right: 0;
}

.bottom-0 {
  bottom: 0;
}

/* Order */
.order-1 {
  order: 1;
}

.order-2 {
  order: 2;
}

/* ==========================================================================
   SPACING UTILITIES
   ========================================================================== */

/* Margins */
.mr-btm-05 {
  margin-bottom: 0.5rem;
}

.mr-btm-0 {
  margin-bottom: 0.7rem;
}

.mr-btm-1 {
  margin-bottom: 1rem;
}

.mr-btm-2 {
  margin-bottom: 2rem;
}

.mr-btm-3 {
  margin-bottom: 3rem;
}

.mr-btm-4 {
  margin-bottom: 4rem;
}
.mr-top-2{
  margin-top: calc(2rem - 4px);
}

.mr-top-4 {
  margin-top: 4rem;
}

.mr-left-1 {
  margin-left: 0.7rem;
}
.mr-left-2 {
  margin-left: 1.25rem;
}
.mr-left-3{
  margin-left: 2rem;
}

.mr-left-20p {
  margin-left: 20px;
}

.mr-inline-2 {
  /* margin-inline: 2rem; */
  margin-inline: min(1.2rem, 2rem);
}

/* Padding */
.pd-top-2 {
  padding-top: 2rem;
}

.pd-top-3 {
  padding-top: 3rem;
}

.pd-top-4 {
  padding-top: 4rem;
}

.pd-top-5 {
  padding-top: 5rem;
}
.pd-btm-0{
  padding-bottom: .625rem;
}
.pd-btm-1 {
    padding-bottom: min(1rem, 1.25rem)
}

.pd-btm-2 {
  padding-bottom: 2rem;
}

.pd-btm-3 {
  padding-bottom: 3rem;
}
/* ... */

